--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,72 @@
         app:layout_constraintTop_toBottomOf="@id/searchText" >
 
     </Button>
+    <Button
+        android:id="@+id/restxml"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Datos XML"
+        app:layout_constraintStart_toEndOf="@id/search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchText"
+        app:layout_constraintHorizontal_bias=".13"
+
+        >
+
+    </Button>
+
+    <Button
+        android:id="@+id/restjson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Datos JSON"
+        app:layout_constraintStart_toEndOf="@id/restxml"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchText"
+        app:layout_constraintHorizontal_bias=".60"
+
+        >
+
+    </Button>
+
+
+    <Button
+        android:id="@+id/restjsonid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="JSON iD"
+        app:layout_constraintStart_toEndOf="@id/search"
+        app:layout_constraintStart_toStartOf="@id/search"
+        app:layout_constraintTop_toBottomOf="@id/search"
+
+        >
+
+    </Button>
+
+    <Button
+        android:id="@+id/restjsonadd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:text="JSON add"
+        app:layout_constraintStart_toEndOf="@+id/restjsonid"
+        app:layout_constraintTop_toBottomOf="@+id/restxml">
+
+    </Button>
+
+    <Button
+        android:id="@+id/restjsondelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:text="JSON Delete"
+        app:layout_constraintStart_toEndOf="@+id/restjsonadd"
+        app:layout_constraintTop_toBottomOf="@+id/restxml">
+
+    </Button>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedscroll"
