--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted ="true">
-        <domain includesSubdomains="true">132.248.234.99</domain>
+        <!-- <domain includesSubdomains="true">132.248.234.99</domain> -->
+        <domain includesSubdomains="true">192.168.0.25</domain>
+
     </domain-config>
 </network-security-config>
